--- a/scss/_weather.scss
+++ b/scss/_weather.scss
@@ -51,6 +51,40 @@
 		color: $white;
 	}
 	.week {
-
+		display: grid;
+		grid-template-columns: 1fr;
+		grid-template-rows: repeat(7, auto);
+		background-color: $navy;
+		padding: 1rem;
+		color: $white;
+		  .box {
+		    display: grid;
+		    grid-template-columns: 1fr 1fr;
+		    grid-template-rows: repeat(2, auto);
+		    .icon {
+		    	grid-column: 1;
+		    	grid-row: 1;
+		    }
+		    h1 {
+		    	grid-column: 2;
+		    	grid-row: 1;
+		    }
+		    h2 {
+		    	grid-column: 2;
+		    	grid-row: 2;
+		    }
+		    .hum {
+		    	grid-column: 1;
+		    	grid-row: 2;
+		    }
+		    .wind {
+		    	grid-column: 1;
+		    	grid-row: 2;
+		    }
+		    .precip {
+		    	grid-column: 2;
+		    	grid-row: 2;
+		    }
+		  }
 	}
 }
