--- a/scss/_weather.scss
+++ b/scss/_weather.scss
@@ -1,3 +1,7 @@
+.hide {
+	display: none;
+}
+
 .weather {
 	background-color: $white;
 	width: 100%;
@@ -54,37 +58,48 @@
 		display: grid;
 		grid-template-columns: 1fr;
 		grid-template-rows: repeat(7, auto);
-		background-color: $navy;
+		background-color: $white;
 		padding: 1rem;
-		color: $white;
-		  .box {
-		    display: grid;
-		    grid-template-columns: 1fr 1fr;
-		    grid-template-rows: repeat(2, auto);
-		    .icon {
-		    	grid-column: 1;
-		    	grid-row: 1;
-		    }
-		    h1 {
-		    	grid-column: 2;
-		    	grid-row: 1;
-		    }
-		    h2 {
-		    	grid-column: 2;
-		    	grid-row: 2;
-		    }
-		    .hum {
-		    	grid-column: 1;
-		    	grid-row: 2;
-		    }
-		    .wind {
-		    	grid-column: 1;
-		    	grid-row: 2;
-		    }
-		    .precip {
-		    	grid-column: 2;
-		    	grid-row: 2;
-		    }
+		color: $black;
+			h1 {
+				text-align: right;
+				margin: 0;
+			}
+		    .box {
+		    	display: grid;
+		    	grid-template-columns: 1fr 1fr 1fr;
+		    	grid-template-rows: repeat(2, auto);
+		    	align-items: center;
+			    .icon {
+			    	grid-column: 1;
+			    	grid-row: 1;
+			    	text-align: center;
+			    }
+			    h1 {
+			    	grid-column: 2;
+			    	grid-row: 1;
+			    	text-align: center;
+			    }
+			    h2 {
+			    	grid-column: 3;
+			    	grid-row: 1;
+			    	text-align: center;
+			    }
+			    .humidity {
+			    	grid-column: 1;
+			    	grid-row: 2;
+			    	text-align: center;
+			    }
+			    .winds {
+			    	grid-column: 2;
+			    	grid-row: 2;
+			    	text-align: center;
+			    }
+			    .precip {
+			    	grid-column: 3;
+			    	grid-row: 2;
+			    	text-align: center;
+			    }
 		  }
 	}
 }
