--- a/scss/_weather.scss
+++ b/scss/_weather.scss
@@ -70,6 +70,11 @@
 		    	grid-template-columns: 1fr 1fr 1fr;
 		    	grid-template-rows: repeat(2, auto);
 		    	align-items: center;
+		    	// background: 
+		    	//     linear-gradient(
+		    	//       rgba(0, 0, 0, 0), 
+		    	//       rgba(0, 0, 0, 0.05)
+		    	//     );
 			    .icon {
 			    	grid-column: 1;
 			    	grid-row: 1;
