--- a/scss/_weather.scss
+++ b/scss/_weather.scss
@@ -1,11 +1,7 @@
-.hide {
-	display: none;
-}
-
 .weather {
 	background-color: $white;
 	width: 100%;
-	height: 100vh;
+	// HEADER
 	.head {
 		padding: 1rem;
 		background-color: $blue;
@@ -26,13 +22,16 @@
 			color: $white;
 		}
 	}
+	// CLOSING HEADER
+	// CURRENT WEATHER
 	.current {
 		padding: 1rem;
 		display: grid;
 		grid-template-columns: 1fr 1fr;
-		grid-template-rows: 1fr;
+		grid-template-rows: 3fr 1fr;
 		align-items: center;
 		justify-items: center;
+		height: calc(100vh - 86px);
 		.icon {
 			grid-column: 1;
 			grid-row: 1;
@@ -41,19 +40,22 @@
 		.detail {
 			grid-column: 2;
 			grid-row: 1;
-			h1 {
-
-			}
-			p {
-
-			}
+		}
+		.sum {
+			grid-column: 1 / span 2;
+			grid-row: 2;
 		}
 	}
+	// CLOSING CURRENT WEATHER
+	// WARNING
 	.warning {
 		background-color: $blue;
-		padding: 1rem;
+		padding: 1rem 2rem;
 		color: $white;
+		font-size: 1.1rem;
 	}
+	// CLOSING WARNING
+	// WEEK FORCAST
 	.week {
 		display: grid;
 		grid-template-columns: 1fr;
@@ -63,18 +65,13 @@
 		color: $black;
 			h1 {
 				text-align: right;
-				margin: 0;
+				margin: 1rem 0rem;
 			}
 		    .box {
 		    	display: grid;
 		    	grid-template-columns: 1fr 1fr 1fr;
 		    	grid-template-rows: repeat(2, auto);
 		    	align-items: center;
-		    	// background: 
-		    	//     linear-gradient(
-		    	//       rgba(0, 0, 0, 0), 
-		    	//       rgba(0, 0, 0, 0.05)
-		    	//     );
 			    .icon {
 			    	grid-column: 1;
 			    	grid-row: 1;
