--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -19,6 +19,13 @@ header {
 	background-color: $blue;
 	transform: translateY(0%);
   	transition: transform .5s;
+  	.bg {
+  		grid-column: 1;
+  		grid-row: 1 / span 2;
+  		object-fit: cover;
+  		width: 100%;
+  		height: 100vh;
+  	}
 	.lead {
 		background-color: $brand;
 		padding: 2rem;
