--- a/scss/_weather.scss
+++ b/scss/_weather.scss
@@ -27,25 +27,39 @@
 
 	// CURRENT WEATHER
 	.current {
-		padding: 1rem;
 		display: grid;
 		grid-template-columns: 1fr 1fr;
-		grid-template-rows: 3fr 1fr;
+		grid-template-rows: 3fr 1fr 2fr 3fr 2fr;
 		align-items: center;
 		justify-items: center;
 		height: calc(100vh - 86px);
 		.icon {
-			grid-column: 1;
-			grid-row: 1;
-			color: $blue;
-		}
-		.detail {
-			grid-column: 2;
+			grid-column: 1 / span 2;
 			grid-row: 1;
 		}
 		.sum {
 			grid-column: 1 / span 2;
 			grid-row: 2;
+		}
+		.high {
+			grid-column: 1;
+			grid-row: 3;
+			text-align: center;
+		}
+		.low {
+			grid-column: 2;
+			grid-row: 3;
+			text-align: center;
+		}
+		.titles {
+			grid-column: 1;
+			grid-row: 4;
+			text-align: right;
+		}
+		.detailinfo {
+			grid-column: 2;
+			grid-row: 4;
+			text-align: left;
 		}
 	}
 	// CLOSING CURRENT WEATHER
