--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -27,7 +27,10 @@ header {
   		height: 100vh;
   	}
 	.lead {
-		background-color: $brand;
+		background: linear-gradient(
+      		rgba(0, 0, 0, 0), 
+      		rgba(55, 147, 146, .8)
+    	);
 		padding: 2rem;
 		display: grid;
 		grid-column: 1;
@@ -35,13 +38,13 @@ header {
 		align-items: center;
 		justify-items: center;
 		img {
-			width: 100%;
+			width: 85%;
 		}
 		button {
-			border: $blue solid .2rem;
+			border: none;
 			border-radius: 2em;
 			background-color: $blue;
-			width: 50%;
+			width: 40%;
 			color: $white;
 		}
 		button:hover {
