--- a/scss/_weather.scss
+++ b/scss/_weather.scss
@@ -42,11 +42,17 @@
 			grid-row: 2;
 		}
 		.high {
+			padding: 1rem 0rem;
+			background-color: lighten($blue, 30%);
+			width: 100%;
 			grid-column: 1;
 			grid-row: 3;
 			text-align: center;
 		}
 		.low {
+			padding: 1rem 0rem;
+			background-color: lighten($blue, 30%);
+			width: 100%;
 			grid-column: 2;
 			grid-row: 3;
 			text-align: center;
@@ -60,6 +66,11 @@
 			grid-column: 2;
 			grid-row: 4;
 			text-align: left;
+		}
+		.warning {
+			background-color: $blue;
+			grid-column: 1 / span 2;
+			grid-row: 5;
 		}
 	}
 	// CLOSING CURRENT WEATHER
