--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,3 +1,7 @@
-// .slidebitch {
-// 	  transform: translateY(-100%);
-// 	}
+.about {
+	padding: 2rem;
+	color: $white;
+	.x {
+		text-align: right;
+	}
+}
