--- a/scss/_weather.scss
+++ b/scss/_weather.scss
@@ -152,3 +152,41 @@
 		  }
 	}
 }
+
+
+
+@media screen and (min-width: 40em) {
+	.weather {
+		.head {
+			img {
+				width: 75%;
+			}
+			.info {
+				font-size: 1.2rem;
+			}
+		}
+	}
+}
+
+
+@media screen and (min-width: 60em) {
+	.weather {
+		.head {
+			img {
+				width: 35%;
+				padding-left: 2rem;
+			}
+			.info {
+				font-size: 1.2rem;
+			}
+		}
+		.current {
+			.warning {
+				width: 100%;
+				p {
+					text-align: center;
+				}
+			}
+		}
+	}
+}
